--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="index.css">
 
     <title>Title</title>
 </head>
@@ -42,6 +43,117 @@
         </div>
     </header>
 
+    <main>
+        <div class="container">
+            <div class="row">
+                <section class="left">
+                    <h2>Recommended for you</h2>
+                    <div class="inner-left">
+                        <div class="box">
+                            <div class="img">
+                                <img src="img/302688.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <p>technical discussion</p>
+                                <h3>93 shadow vt1100c</h3>
+                                <div class="sub-details">
+                                    <span>jan.kowalski</span>
+                                    <span>9 h temu</span>
+                                    <span>jan.kowalski</span>
+                                    <span>replied</span>
+                                    <span>5 h temu</span>
+                                    <div class="comment">
+                                        <i class="fa-solid fa-comment"></i>
+                                        <span>6</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="img">
+                                <img src="img/302688.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <p>technical discussion</p>
+                                <h3>93 shadow vt1100c</h3>
+                                <div class="sub-details">
+                                    <span>jan.kowalski</span>
+                                    <span>9 h temu</span>
+                                    <span>jan.kowalski</span>
+                                    <span>replied</span>
+                                    <span>5 h temu</span>
+                                    <div class="comment">
+                                        <i class="fa-solid fa-comment"></i>
+                                        <span>6</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="img">
+                                <img src="img/302688.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <p>technical discussion</p>
+                                <h3>93 shadow vt1100c</h3>
+                                <div class="sub-details">
+                                    <span>jan.kowalski</span>
+                                    <span>9 h temu</span>
+                                    <span>jan.kowalski</span>
+                                    <span>replied</span>
+                                    <span>5 h temu</span>
+                                    <div class="comment">
+                                        <i class="fa-solid fa-comment"></i>
+                                        <span>6</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="right">
+                    <div class="box first">
+                        <h3>honda shadow forums</h3>
+                        <span>since 2007</span>
+                        <p>Welcome to Honda Shadow Forum. Lorem ipsum etc</p>
+                        <div class="stats">
+                            <div>
+                                <h4>1.6M</h4>
+                                <span>posts</span>
+                            </div>
+                            <div>
+                                <h4>79.4kM</h4>
+                                <span>members</span>
+                            </div>
+                        </div>
+                        <div class="buttons">
+                            <a href="#" class="btn btn-red"><i class="fa-solid fa-user-large"></i> join community</a>
+                            <a href="#" class="btn btn-white"><i class="fa-solid fa-store"></i> grow your business</a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+
+
+    <footer>
+        <div class="container">
+            <ul>
+                <li><a href="#">home</a> </li>
+                <li><a href="#">about us</a> </li>
+                <li><a href="#">terms of us</a> </li>
+                <li><a href="#">privacy of policy</a> </li>
+                <li><a href="#">help</a> </li>
+                <li><a href="#">business directory</a> </li>
+                <li><a href="#">contact us</a> </li>
+                <li><a href="#">grow your business</a> </li>
+            </ul>
+            <p>Lorem</p>
+            <p>Ipsum</p>
+            <p>Itd</p>
+        </div>
+    </footer>
     <script
         src="https://kit.fontawesome.com/9e5ba2e3f5.js"
         crossorigin="anonymous">
